# trulens_explain

./: README.md  format.sh  setup.cfg  setup.py
.azure_pipelines/: README.md
notebooks/: intro_demo_pytorch.ipynb  intro_demo_tf2_keras.ipynb  nlp_demo_pytorch.ipynb  nlp_demo_tf2.ipynb
notebooks/cuda/: devices_pytorch.ipynb  memtest_pytorch.ipynb
notebooks/overfitting/: overfitting_and_conceptual_soundness.ipynb
tests/keras/unit/: attribution_axioms_test.py  batch_tests.py  doi_test.py  environment_test.py  ffn_edge_case_architectures_test.py  keras_model_test.py
tests/pytorch/unit/: attribution_axioms_test.py  batch_test.py  determinism_test.py  doi_test.py  environment_test.py  ffn_edge_case_architectures_test.py  model_wrapper_test.py  multi_qoi_test.py
tests/tf/unit/: attribution_axioms_test.py  batch_tests.py  doi_test.py  environment_test.py  ffn_edge_case_architectures_test.py  model_wrapper_test.py
tests/tf2/unit/: attribution_axioms_test.py  batch_test.py  doi_test.py  ffn_edge_case_architectures_test.py  model_wrapper_test.py  model_wrapper_tf_function_test.py  model_wrapper_tf_subclassed_test.py  multi_qoi_test.py
tests/tf2_non_eager/unit/: batch_test.py  (+4 more)
tests/unit/: attribution_axioms_test_base.py  backend_test_base.py  batch_test_base.py  determinism_test_base.py  doi_test_base.py  environment_test_base.py  model_wrapper_test_base.py  multi_qoi_test_base.py  qoi_test_base.py
trulens_explain/: visualizations.py
trulens_explain/nn/: attribution.py  distributions.py  quantities.py  slices.py
trulens_explain/utils/: nlp.py  test.py
(+17 files in other folders)
