[metadata]
name = trulens_explain
version = attr: trulens_explain.__version__
url = https://www.trulens.org
license = MIT
author = Snowflake Inc
author_email = ml-observability-wg-dl@snowflake.com
description = Library containing attribution and interpretation methods for deep nets.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
